[FEAT] LockTrip update

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+## Project
+temp/
+
+
+
+
+
 # Created by https://www.toptal.com/developers/gitignore/api/webstorm+all
 # Edit at https://www.toptal.com/developers/gitignore?templates=webstorm+all
 
